@@ -47,7 +47,10 @@ if ($has_i18n)
   # set up i18n stuff
   &setlocale (LC_MESSAGES, "");
   &bindtextdomain ("@GETTEXT_PACKAGE@", "@localedir@");
-  &bind_textdomain_codeset ("@GETTEXT_PACKAGE@", "UTF-8");
+
+  # Big stupid hack, but it's the best I can do until
+  # distros switch to perl's gettext 1.04...
+  eval "&bind_textdomain_codeset (\"@GETTEXT_PACKAGE@\", \"UTF-8\")";
   &textdomain ("@GETTEXT_PACKAGE@");
 
   eval "sub _ { return gettext (shift); }";
